# DjangoProject

./: .env.sample  README.md  category.json  grops.json  product.json  pyproject.toml
blogs/: admin.py  models.py  urls.py  views.py
blogs/migrations/: 0001_initial.py
blogs/templates/: base.html  blog.html
blogs/templates/blogs/: base.html  blog.html  blog_create.html  blog_delete.html  blogs.html
blogs/templates/blogs/includes/: inc_footer.html  inc_header.html
blogs/templates/includes/: inc_header.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: add_category.py  add_product.py
catalog/migrations/: 0001_initial.py  0002_alter_product_options_product_owner_and_more.py  0003_alter_product_publication.py  0004_remove_product_owner_remove_product_publication.py  0005_alter_product_options_alter_product_name.py  0006_alter_product_name.py  0007_alter_product_options_product_owner_and_more.py
catalog/templates/: base.html  contacts.html  home.html  index.html  product.html  product_delete.html  product_form.html  products.html
catalog/templates/includes/: inc_header.html
catalog/templatetags/: my_tags.py
config/: settings.py  urls.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/: login.html  register.html
